# cppkafka_example

./: .gitmodules  CMakeLists.txt
consumer/: CMakeLists.txt  consumer.cpp
producer/: CMakeLists.txt  producer.cpp
